k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devsecops-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: devsecops-app
  template:
    metadata:
      labels:
        app: devsecops-app
    spec:
      containers:
      - name: devsecops-app
        image: tanishqraina/devsecops-app:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
